--- a/css/styles.css
+++ b/css/styles.css
@@ -13,26 +13,45 @@ ul{
 
 
 body{
-    font-family: Roboto, sans-serif;
+    
 }
 
 
 /* Хедер */
 
 /* Фон хедера */
+
 .header-phone{
     background-color:#FFFFFF; 
 }
 
 /* Колір логотипу */
-.logo{
-    color: var(--link-text-color);
-    
+
+.logo-web, .logo-studio{
+    color: #2196F3;
+    font-family: 'Raleway';
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
+.logo-studio{
+    color: #000000;
+}
+
+
 /* Кольори ссилок хедера */
+
 .header-nav a{
     color: var(--title-text-color);
+    text-decoration: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     
 }
 
@@ -43,6 +62,13 @@ body{
 
 .header-nav-mail{
     color:var(--subtitle-text-color);
+    text-decoration: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .header-nav-mail:hover,
@@ -53,6 +79,13 @@ body{
 
 .header-nav-tel{
     color:var(--subtitle-text-color);
+    text-decoration: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .header-nav-tel:hover,
@@ -62,26 +95,64 @@ body{
 
 
 /* Тіло сайту */
+
 /* Заголовки */
+
 .section-title{
     color: var(--title-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 .title-text{
     color: var(--title-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .subtitle-text{
     color: var(--subtitle-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;    
+    letter-spacing: 0.03em;
 }
 
 .title-name{
     color: var(--title-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 /* Колір головного заголовку(Ефективні...)*/
+
 .section-title-with-a-button {
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
     
 }
 
@@ -98,6 +169,13 @@ body{
 /* Колір заголовків посад команди */
 .subtitle-specialty{
     color: var(--subtitle-text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 
@@ -106,6 +184,15 @@ body{
 .button{
     color: #FFFFFF;
     background-color: #2196F3;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
 }
 
 
@@ -114,10 +201,6 @@ body{
 .header-nav .link.current{
     color: var(--link-text-color); 
 }
-
-
-
-
 
 
 
