--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body{
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
+    color: var(--title-text-color);
 }
 
 
@@ -45,7 +46,6 @@ body{
 /* Кольори ссилок хедера */
 
 .header-nav a{
-    color: var(--title-text-color);
     text-decoration: none;
     font-weight: 500;
     letter-spacing: 0.02em;
@@ -88,7 +88,6 @@ body{
 /* Заголовки */
 
 .section-title{
-    color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -96,7 +95,6 @@ body{
 }
 
 .title-text{
-    color: var(--title-text-color);
     font-weight: 700;
     text-transform: uppercase;
 }
@@ -107,7 +105,6 @@ body{
 }
 
 .title-name{
-    color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -207,3 +204,42 @@ body{
 .address-block a:focus {
     color: var(--link-text-color);
 }
+
+
+
+/* Портфоліо */
+
+.button-portfolio{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    background-color: var(--link-text-color);
+    cursor: pointer;
+}
+
+
+.work-list .title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: #212121;
+}
+
+.work-list .subtitle{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
