--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ body{
 /* Кольори ссилок хедера */
 
 .header-nav a{
+    color: #212121;
     text-decoration: none;
     font-weight: 500;
     letter-spacing: 0.02em;
